# equal-risk-portfolio

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .rubocop.yml  AGENTS.md  Dockerfile  Gemfile  bun.config.js  docker-compose.yml  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/: .gitignore  Dockerfile  pyproject.toml
api/app/: db.py  fetch.py  main.py  math.py
app/controllers/: application_controller.rb  portfolios_controller.rb  search_controller.rb  tickers_controller.rb
app/helpers/: allocation_helper.rb  application_helper.rb  portfolio_display_helper.rb  portfolio_helper.rb
app/models/: allocation.rb  cap_and_redistribute_option.rb  close_price.rb  portfolio.rb  portfolio_version.rb  search_ticker_result.rb  stock_info.rb  ticker.rb  ticker_search_result.rb
app/services/: math_engine_client.rb  weight_calculator.rb
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
config/environments/: test.rb
config/initializers/: lambda.rb
db/: schema.rb  seeds.rb
db/migrate/: 20250925175752_create_stock_prices.rb  20250925190720_create_stock_infos.rb  20251001183220_create_portfolios.rb  20251006162215_create_portfolios.rb  20251016184811_create_close_prices.rb  20251016230231_add_unique_ticker_index.rb  20251017174436_add_weights_to_portfolio.rb  20251021183622_create_close_prices.rb  20251021185035_create_portfolios.rb  20251104030545_add_allocations.rb  20251104154306_create_portfolio_versions.rb  (+16 more)
test/: application_system_test_case.rb  test_helper.rb
(+84 files in other folders)
